--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,5 +1,84 @@
 .cabecera {
-  background-color: #12006b; }
+  background-color: #2678c0;
+  display: flex;
+  justify-content: space-evenly;
+  height: 24vh;
+  width: 100%;
+  position: fixed;
+  background-color: #6b87ab;
+  z-index: 10; }
+  .cabecera .menu {
+    background-color: rgba(255, 192, 203, 0);
+    justify-content: space-evenly;
+    overflow-y: hidden;
+    width: 80%;
+    padding: 5%;
+    font-size: 1.5em;
+    display: inline; }
+  .cabecera a {
+    text-decoration: none;
+    color: black; }
+  .cabecera .menuitem {
+    list-style: none;
+    display: inline;
+    padding: 4%;
+    text-decoration: none; }
+  .cabecera .presentacion {
+    padding: 6%; }
+  .cabecera .logo {
+    padding-left: 14%;
+    margin-top: 4vh;
+    height: 20vh; }
+
+#bienvenida {
+  text-align: center; }
 
 .principal {
-  background-color: aqua; }
+  padding-top: 15%;
+  background-color: #aabebe; }
+
+.deportes {
+  text-align: center; }
+
+.indu {
+  text-align: center; }
+
+.calzado {
+  text-align: center; }
+
+.formT {
+  text-align: center; }
+
+.depor {
+  margin: 4%; }
+
+.card {
+  padding: 2%; }
+
+#formulario {
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
+  background-color: #706fb0;
+  overflow-x: hidden;
+  padding-bottom: 4%; }
+
+.form-control {
+  margin: 3%;
+  width: 40%;
+  overflow: hidden;
+  margin-left: 30%; }
+
+.botones {
+  justify-content: space-evenly;
+  margin-left: 30%; }
+
+.foot {
+  background-color: #9e9ce1;
+  color: #070707;
+  text-align: center;
+  height: 25vh;
+  width: 100%;
+  padding-top: 5%;
+  overflow-y: hidden;
+  overflow-x: hidden; }
