agrego fetch y cargo datos desde una API

--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -73,6 +73,11 @@
   justify-content: space-evenly;
   margin-left: 30%; }
 
+.botonSec {
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+
 .foot {
   background-color: #9e9ce1;
   color: #070707;
