--- a/estilos/styles.scss
+++ b/estilos/styles.scss
@@ -82,6 +82,11 @@
     justify-content: space-evenly;
     margin-left: 30%;
 };
+.botonSec{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 .foot {
     background-color: rgb(158, 156, 225);
     color: rgb(7, 7, 7);
